infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: tickets.dev
      http: 
        paths:
          - path: /api/users/?(.*)
            backend: 
              service:
                name: auth-srv
                port: 
                  number: 3000
            pathType: ImplementationSpecific
